Code/EJEMPLO2-demo-gRPC-kuberntes/yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: sopes1.carlosdavid.technology
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-grpc
            port:
              number: 2000
